# dddbox

./: .flake8  README.md  README.rst  pyproject.toml  readme.md
configs/default/: config.yml
src/dddbox/: actions.py  buttons.py  callbacks.py  config.py  config.yml  data.py  images.py  main.py  root.py  settings.py
src/dddbox/devices/: base.py  duet.py
src/dddbox/frames/: grid.py  movement.py  root.py  top_bar.py
src/dddbox/images/: factory.py  gimp.xcf
src/dddbox/widgets/: buttons.py  commands.py  frames.py  labels.py
